--- a/source/static/css/style.css
+++ b/source/static/css/style.css
@@ -39,3 +39,54 @@ label {
     background-color: #fff;
     flex-direction: initial;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.pagination a, .pagination .page-disabled {
+    display: inline-block;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 3px;
+}
+
+.pagination a {
+    background: #6c757d;
+    color: white;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background: #565e64;
+    text-decoration: none;
+}
+
+.pagination .page-disabled {
+    background: white;
+    color: #dddddd
+}
+
+.pagination .current-page {
+    display: inline-block;
+}
+
+.pagination .current-page input {
+    width: 50px;
+    padding: 5px 7px;
+    font-size: inherit;
+    border-radius: 5px;
+    text-align: center;
+    border: solid 1px gray;
+}
+
+.current-page {
+    background-color: white;
+}
+
+.search_form {
+    flex-direction: row;
+    background-color: white;
+}
