--- a/source/homework59/templates/index.html
+++ b/source/homework59/templates/index.html
@@ -6,6 +6,12 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'issue_create' %}">Add new issue</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'project_create' %}">Create Project</a>
+    </li>
 {% endblock %}
 {% block content %}
     {% include 'partial/search.html' %}
@@ -17,6 +23,9 @@
                 <a href="{% url 'issue_detail' issue.pk %}" class="btn btn-secondary">More</a>
             </div>
         </div>
+        {% empty %}
+        <h2>No issues</h2>
+        <a href="{% url 'index' %}" class="btn btn-secondary">Back</a>
     {% endfor %}
     {% if is_paginated %}
         {% include 'partial/pagination.html' %}
