--- a/source/homework59/templates/project_create.html
+++ b/source/homework59/templates/project_create.html
@@ -2,6 +2,14 @@
 {% block title %}
     Create Project
 {% endblock %}
+{% block menu %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'issue_create' %}">Add new issue</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+    </li>
+{% endblock %}
 {% block content %}
     <div class="form_div">
         <form action="{% url 'project_create' %}" method="post">
