--- a/source/homework59/templates/project_detail.html
+++ b/source/homework59/templates/project_detail.html
@@ -2,6 +2,17 @@
 {% block title %}
     Project
 {% endblock %}
+{% block menu %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'issue_create' %}">Add new issue</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'project_create' %}">Create Project</a>
+    </li>
+{% endblock %}
 {% block content %}
     <div class="card mt-2">
         <div class="card-body">
