Issue Project create view
Добавил создание задачи в выбранном проекте. Пользователь не выбирает проект в форме, pk проекта передаётся в url.

--- a/source/homework59/templates/project_detail.html
+++ b/source/homework59/templates/project_detail.html
@@ -22,6 +22,7 @@
     </div>
     <div class="issues_block mt-2">
         <h4>Project issues</h4>
+        <a href="{% url 'issue_project_create' project.pk %}" class="btn btn-secondary">Create new issue</a>
         {% for issue in issues %}
             <div class="card mt-2">
                 <h5 class="card-header">Issue Details</h5>
