--- a/source/homework59/templates/partial/issue_project_form.html
+++ b/source/homework59/templates/partial/issue_project_form.html
@@ -2,6 +2,6 @@
 {{ form.as_p }}
 <p>
     <label for="project_id">Проект:</label>
-    <input type="text" name="project_id" value="{{ project_value }}" id="project_id">
+    <input type="text" name="project_id" value="{{ project_value }}" disabled id="project_id">
 </p>
 <button type="submit" class="btn btn-secondary">{{ button_text }}</button>
